--- a/manuscripts/24-jb-dags/24-jb-experiments.qmd
+++ b/manuscripts/24-jb-dags/24-jb-experiments.qmd
@@ -1,8 +1,8 @@
 ---
 title: 'Confounding in Experiments'
 abstract: |
-  Confounding bias arises when a treatment and outcome share a common cause. In randomised controlled trials, treatment assignment is random, ostensibly eliminating confounding bias. Here, we use causal directed acyclic graphs to unveil eight structural sources of bias that nevertheless persist in these trials. This analysis highlights the crucial role of causal inference methods in the design and analysis of experiments, ensuring the validity of conclusions drawn from experimental data.
-  **Keywords:** *Causal Inference*; *Experiments*; *DAGs*; *Evolution*; *Per Protocol Effect*; *Intention to Treat Effect*
+  Confounding bias arises when a treatment and outcome share a common cause. In randomised controlled experiments (trials), treatment assignment is random, ostensibly eliminating confounding bias. Here, we use causal directed acyclic graphs to unveil eight structural sources of bias that nevertheless persist in these trials. This analysis highlights the crucial role of causal inference methods in the design and analysis of experiments, ensuring the validity of conclusions drawn from experimental data.
+  **Keywords:** *Causal Inference*; *Experiments*; *DAGs*; *Evolution*; *Per Protocol Effect*; *Intention to Treat Effect*; *RTC*. 
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
@@ -116,7 +116,7 @@ loadfonts(device = 'all')
 
 Yes.
 
-"Does this mean that confounding is ruled out?"
+"Does this mean that confounding bias is ruled out?"
 
 No.
 
@@ -128,9 +128,9 @@ We begin by defining our terms. [Appendix A](#id-app-a) provides a glossary of t
 
 ### Terminology
 
-- **Confounding**: Treatment and outcome are associated independently of causality or are disassociated in the presence of causality relative to the causal question at hand.
+- **Confounding bias**: Treatment and outcome are associated independently of causality or are disassociated in the presence of causality relative to the causal question at hand.
 
-- **Intention-to-Treat Effect (equivalent to 'intent-to-treat effect')**: The effect of treatment assignment, analysed based on initial treatment assignment, reflecting real-world effectiveness but possibly obscuring mechanisms.
+- **Intention-to-Treat Effect (or 'intent-to-treat effect')**: The effect of treatment assignment, analysed based on initial treatment assignment, reflecting real-world effectiveness but possibly obscuring mechanisms.
 
 - **Per-protocol effect**: The effect of adherence to a randomly assigned treatment if adherence were perfect [@hernan2017per]. We have no guarantee that the intention-to-treat effect will be the same as the per-protocol effect. A safe assumption is that:
 
@@ -139,6 +139,7 @@ $$
 $$
 
 When evaluating evidence for causality, in addition to specifying their causal contrast, effect measure, and target population, investigators should specify whether they are estimating an intention-to-treat or per-protocol effect [@hernán2004; @tripepi2007].
+
 
 ### Meaning of Symbols
 
@@ -164,7 +165,7 @@ We use the following conventions in our directed acyclic graphs:
 
 - **Dashed Circle** $\circledotted{X}$: Indicates no adjustment is made for a variable (implied for unmeasured confounders).
 
-- **$\mathcal{R} \rightarrow A$**: Randomisation into the treatment condition.
+- **$\mathcal{R} \rightarrow A$**: Randomisation into a treatment condition.
 
 
 ### Review of d-separation for Causal Identification on a Graph
@@ -233,7 +234,7 @@ We use causal directed acyclic graphs to describe eight types of confounding bia
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{2.2}$ clarifies a response: do not control post-treatment variables.
 
-The point that investigators should not condition on post-treatment variables is worth developing using a common flaw in experimental designs: exclusion from 'attention checks.' Consider that if an experimental condition affects attention and an unmeasured variable is a common cause of attention and the outcome, then selection on attention will induce confounding bias in a randomised experiment. For example, imagine that people are more attentive in the scientific authority design because science is interesting -- whether or not one is religious, yet religion is not interesting whether or not one is religious. Suppose further that an unmeasured 'altruistic disposition' affects both attention and ratings of source credibility. By selecting on attention, investigators may unwittingly destroy randomisation. If attention is a scientifically interesting effect modifier, it should be measured before random assignment to treatment.
+The point that investigators should not condition on post-treatment variables can be illustrated with a common flaw in experimental designs: exclusion based on 'attention checks'. Consider that if an experimental condition affects attention and an unmeasured variable is a common cause of attention and the outcome, then selection on attention will induce confounding bias in a randomised experiment. For example, imagine that people are more attentive in the scientific authority design because science is interesting -- whether or not one is religious, yet religion is not interesting whether or not one is religious. Suppose further that an unmeasured 'altruistic disposition' affects both attention and ratings of source credibility. By selecting on attention, investigators may unwittingly destroy randomisation. If attention is a scientifically interesting effect modifier, it should be measured before random assignment to treatment.
 
 
 ### Example 3: Demographic Measures at End of Study Induce Collider Stratification Bias
@@ -252,12 +253,12 @@ The point that investigators should not condition on post-treatment variables is
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{5}$ Suppose that the experimental condition affects measurement error in self-reported source credibility $U_{\Delta Y}$. For example, suppose that source framing has no effect on credibility. However, those in the scientific authority condition are more likely to express credibility for science due to self-presentation bias. Likewise, perceiving the investigators to be irreligious, participants in the religious source framing condition might report less credibility for religious authorities than they secretly harbour. Directed measurement error from the treatment to the measurement error of the outcomes creates an association in the absence of true causality, which we denote by removing any arrow between the treatment $A$ and the true outcome $Y$.
 
-@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{5}$ reveals there is no easy solution to directed measurement error bias. If the magnitude of bias were known, investigators could apply adjustments. Additional experiments might be devised that are insensitive to directed measurement error bias. Investigators might compute sensitivity analyses to examine how much measurement error bias would be required to explain away a result (refer to @linden2020EVALUE for relatively easy-to-implement sensitivity analysis). The point we make here is that randomisation does not prevent confounding by directed measurement error bias. Investigators must be vigilant.
+@tbl-terminologyelconfoundersexperiments $\mathcal{G}_{5}$ suggests there is no easy solution to directed measurement error bias in this setting. If the magnitude of the bias were known, investigators could apply adjustments [@lash2009applying]. Additional experiments might be devised that are insensitive to directed measurement error bias. Investigators might compute sensitivity analyses to examine how much measurement error bias would be required to explain away a result (refer to @linden2020EVALUE for relatively easy-to-implement sensitivity analysis). The point we make here is that randomisation does not prevent confounding by directed measurement error bias. Investigators must be vigilant.
 
 
 ### Example 6: Per Protocol Effect Lost in Sustained Treatments Where Treatment Adherence Is Affected by a Measured Confounder
 
-Setting aside self-inflicted injuries of post-treatment conditioning and directed measurement error, randomisation recovers unbiased causal effect estimates for randomisation into treatment. Under perfect adherence, these effect estimates correspond to the causal effects of the treatments themselves. However, adherence is seldom perfect. The following examples reveal challenges for recovering per-protocol effects in settings where there is imperfect adherence. @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{6-8}$ are adapted from @hernan2017per.
+Setting aside self-inflicted injuries of post-treatment conditioning and directed measurement error, **randomisation recovers unbiased causal effect estimates for randomisation into treatment.**. Under perfect adherence, such estimates correspond to the causal effects of the treatments themselves. However, adherence is seldom perfect. The following examples reveal challenges for recovering per-protocol effects in settings where there is imperfect adherence. @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{6-8}$ are adapted from @hernan2017per.
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{6}$ illustrates the threat for identifying the per-protocol effect in sustained treatments where treatment adherence is affected by a measured confounder. Consider a sequential experiment that investigates the effects of sustained adherence to yoga on psychological distress, measured at the end of the study. Suppose that inflexible people are less likely to adhere to the protocols set out in the experiment and therefore do not. Suppose that flexibility is measured by indicator $L$. If we do not condition on $L$, there is an open path from $A_1 \associationred L_0 \associationred U \associationred Y_2$. Although investigators may recover the effect of randomisation into treatment, the per-protocol effect is confounded.
 
@@ -276,7 +277,7 @@ Setting aside self-inflicted injuries of post-treatment conditioning and directe
 
 @tbl-terminologyelconfoundersexperiments $\mathcal{G}_{8}$ illustrates the threat for identifying the per-protocol effect in sustained treatments where there are both measured and unmeasured confounders. Suppose flexibility affects adherence, yoga affects flexibility, and an unmeasured variable, such as prejudice toward eastern spiritual practices, affects adherence. We have no measures for this variable. There is unmeasured confounding.
 
-If there were no effect of yoga on well-being except through flexibility, and if flexibility were not affected by the unmeasured antipathy toward eastern spiritual practices, and further, if the effect of flexibility on yoga at each time point were conditionally independent of all future counterfactual data, both for the treatments and the outcomes, then it might be possible to construct special estimators that identify the per-protocol effect of yoga on well-being in the presence of unmeasured confounding that affects adherence (refer to @hernan2017per). Clearly, we have come a long way from the ANOVAs routinely deployed in experimental studies. However, if we seek to understand the effect of yoga on well-being and not the effect of random assignment to yoga on well-being, we require special estimators.
+If there were no effect of yoga on well-being except through flexibility, and if flexibility were not affected by the unmeasured antipathy toward eastern spiritual practices, and further, if the effect of flexibility on yoga at each time point were conditionally independent of all future counterfactual data, both for the treatments and the outcomes, then it might be possible to construct special estimators that identify the per-protocol effect of yoga on well-being in the presence of unmeasured confounding that affects adherence (refer to @hernan2017per). These special estimators are quite different from the ANOVAs, regressions models, and multi-level regression models routinely deployed in experimental studies. However, if we seek to understand the effect of yoga on well-being and not the effect of random assignment to yoga on well-being the routine estimators will not work: we require special estimators [@hernan2024stating; @hoffman2023; @diaz2023lmtp].
 
 ## Conclusions
 
@@ -284,29 +285,24 @@ The examples considered here do not exhaust all threats to causal inference in e
 
 First, there is no need to adjust for baseline confounders in a non-sequential randomised experiment. Although an unadjusted difference of means should be reported, Lin has shown that if a study is sufficiently powered, regression adjustment where the full set of treatments are interacted with baseline covariates may improve (and will not diminish) asymptotic precision [@lin2012regressexperiments]. In some settings, investigators will want to evaluate effect modification with strata of covariates at baseline. However, in sufficiently large samples, randomisation ensures balance.
 
-Second, confounding biases can occur in randomised experiments even when randomisation succeeds. To evaluate such bias, we must first state whether our causal estimand is the intention-to-treat effect or the per-protocol effect. Randomisation recovers an unbiased estimate of the intention-to-treat effect — that is, the effect of treatment assignment. Randomisation will only recover the per-protocol effect, the effect of following a treatment, if those assigned to treatment follow the treatment to which they have been assigned.
+Second, confounding biases can occur in randomised experiments even when randomisation succeeds. To evaluate such bias, we must first state whether our causal estimand is the intention-to-treat effect or the per-protocol effect. Randomisation recovers an unbiased estimate of the intention-to-treat effect — that is, the effect of treatment assignment. Randomisation will only recover the per-protocol effect, the effect of following a treatment, if those assigned to treatment adhere to their assigned treatment.
 
-Third, causal directed acyclic graphs are useful for clarifying sources of bias for both the intention-to-treat effect and the per-protocol effect. 
+Third, causal directed acyclic graphs are useful for clarifying sources of bias for both the intention-to-treat effect and the per-protocol effect. For the intention-to-treat effect, biases arise in two main ways: when investigators impose selection criteria on participants after randomisation (e.g., assessing treatment effects only in those who have followed protocols) or when investigators estimate treatment effects using covariates collected after randomisation. Both post-treatment selection and post-treatment conditioning are self-inflicted sources of confounding bias. The remedy is to not allow your design to compromise randomisation. For the per-protocol effect, randomisation cannot guarantee unbiased estimates. Obtaining consistent estimates for the per-protocol effect requires the same assumptions and methods that are required when estimating causal effects in observational studies.
 
-  i. For the intention-to-treat effect, biases arise in two main ways: 
-      a. when investigators impose selection criteria on participants after randomisation (e.g., assessing treatment effects only in those who have followed protocols) or 
-      b. when investigators estimate treatment effects using covariates collected after randomisation. 
-    Both post-treatment selection and post-treatment conditioning are self-inflicted sources of confounding bias. The remedy: do not allow your design to compromise randomisation.
-  ii. For the per-protocol effect, randomisation cannot guarantee unbiased estimates. Obtaining consistent estimates for the per-protocol effect requires the same assumptions and methods that are required when estimating causal effects in observational studies.
+Fourth, in a sequential randomised experiment, standard methods such as regression adjustment, statistical structural equation models, and multi-level models will often fail to yield unbiased estimands [@richardson2013; @young2014identification; @bulbulia2024swigstime]. Special estimators such as 'g-methods' [@hernan2024WHATIF] or targeted learning [@vanderlaan2018] may be necessary to recover per-protocol effects in sequential designs. The requirements for estimating per-protocol effects in experiments cannot be stated in isolation from the details of each study [@robins1986; @hernan2024WHATIF].
 
-Fourth, in a sequential randomised experiment, standard methods such as regression adjustment, statistical structural equation models, and multi-level models will often fail to yield unbiased estimands [@richardson2013; @young2014identification; @bulbulia2024swigstime]. Special estimators such as 'g-methods' [@hernan2024WHATIF] or targeted learning [@vanderlaan2018] may be necessary to recover per-protocal effects in sequential designs. The requirements for estimating per-protocol effects in experiments cannot be stated in isolation from the details of each study [@robins1986; @hernan2024WHATIF].
 
 From these observations, we offer the following practical advice:
 
 1. Ensure covariate data are collected before randomisation into treatments.
 2. If attention is a relevant covariate, measure it before randomisation. Do not use 'attention checks' to select participants after randomisation into treatments.
-3. If adjustment is used in a single point treatment with baseline covariates, interact every level of treatment with the baseline covariates, following @lin2012regressexperiments.
+3. If adjustment is used in a single-point treatment with baseline covariates, interact every level of treatment with the baseline covariates, following @lin2012regressexperiments.
 4. For sequential treatments, collect data for adherence (where possible).
-5. For sequential treatments, at each measurement interval, ensure covariate data collection for any variable that might affect adherence, or that might be proxies for such variables, particularly if these variables, or proxies of these variables, might affect outcomes at the end of the study.
+5. For sequential treatments, at each measurement interval, ensure covariate data collection for any variable that might affect adherence or that might be proxies for such variables, particularly if these variables, or proxies for these variables, might affect outcomes at the end of the study.
 6. Do not infer per-protocol effects from the portion of the sample that followed experimental protocols. Such selection can lead to differences between the study population at the start and end, compromising external validity.
 7. Where possible, report both the per-protocol effect and the intention-to-treat effect.
 
-It is beyond the scope of this commentary to describe the special methods for estimating per-protocol effects in sequential studies. Our task has been to demonstrate that satisfying the assumptions for valid causal inferences in experiments is typically more challenging than many experimental human scientists presently understand [refer to @montgomery2018]. Methods for causal inference have wide scope for improving the design, analysis, and interpretation of experimental research.
+It is beyond the scope of this commentary to describe the special methods for estimating per-protocol effects with multiple sequential treatments. Our task has been to demonstrate that satisfying the assumptions for valid causal inferences in experiments is typically more challenging than many experimental human scientists presently understand [refer to @montgomery2018]. Methods for causal inference have wide scope for improving the design, analysis, and interpretation of experimental research.
 
 {{< pagebreak >}}
 
