--- a/manuscripts/24-jb-dags/24-jb-experiments.tex
+++ b/manuscripts/24-jb-dags/24-jb-experiments.tex
@@ -210,20 +210,20 @@
       
 
 
-\date{2024-06-03}
+\date{2024-06-09}
 \begin{document}
 \maketitle
 \begin{abstract}
 Confounding bias arises when a treatment and outcome share a common
-cause. In randomised controlled trials, treatment assignment is random,
-ostensibly eliminating confounding bias. Here, we use causal directed
-acyclic graphs to unveil eight structural sources of bias that
-nevertheless persist in these trials. This analysis highlights the
-crucial role of causal inference methods in the design and analysis of
-experiments, ensuring the validity of conclusions drawn from
+cause. In randomised controlled experiments (trials), treatment
+assignment is random, ostensibly eliminating confounding bias. Here, we
+use causal directed acyclic graphs to unveil eight structural sources of
+bias that nevertheless persist in these trials. This analysis highlights
+the crucial role of causal inference methods in the design and analysis
+of experiments, ensuring the validity of conclusions drawn from
 experimental data. \textbf{Keywords:} \emph{Causal Inference};
 \emph{Experiments}; \emph{DAGs}; \emph{Evolution}; \emph{Per Protocol
-Effect}; \emph{Intention to Treat Effect}
+Effect}; \emph{Intention to Treat Effect}; \emph{RTC}.
 \end{abstract}
 
 \subsection{Introduction}\label{introduction}
@@ -233,7 +233,7 @@ causes of treatment assignment and outcome?''
 
 Yes.
 
-``Does this mean that confounding is ruled out?''
+``Does this mean that confounding bias is ruled out?''
 
 No.
 
@@ -266,14 +266,14 @@ a glossary of terms in causal inference.
 
 \begin{itemize}
 \item
-  \textbf{Confounding}: Treatment and outcome are associated
+  \textbf{Confounding bias}: Treatment and outcome are associated
   independently of causality or are disassociated in the presence of
   causality relative to the causal question at hand.
 \item
-  \textbf{Intention-to-Treat Effect (equivalent to `intent-to-treat
-  effect')}: The effect of treatment assignment, analysed based on
-  initial treatment assignment, reflecting real-world effectiveness but
-  possibly obscuring mechanisms.
+  \textbf{Intention-to-Treat Effect (or `intent-to-treat effect')}: The
+  effect of treatment assignment, analysed based on initial treatment
+  assignment, reflecting real-world effectiveness but possibly obscuring
+  mechanisms.
 \item
   \textbf{Per-protocol effect}: The effect of adherence to a randomly
   assigned treatment if adherence were perfect
@@ -340,8 +340,8 @@ We use the following conventions in our directed acyclic graphs:
   \textbf{Dashed Circle} \(\circledotted{X}\): Indicates no adjustment
   is made for a variable (implied for unmeasured confounders).
 \item
-  \textbf{\(\mathcal{R} \rightarrow A\)}: Randomisation into the
-  treatment condition.
+  \textbf{\(\mathcal{R} \rightarrow A\)}: Randomisation into a treatment
+  condition.
 \end{itemize}
 
 \subsubsection{Review of d-separation for Causal Identification on a
@@ -465,19 +465,19 @@ Table~\ref{tbl-terminologyelconfoundersexperiments}
 post-treatment variables.
 
 The point that investigators should not condition on post-treatment
-variables is worth developing using a common flaw in experimental
-designs: exclusion from `attention checks.' Consider that if an
-experimental condition affects attention and an unmeasured variable is a
-common cause of attention and the outcome, then selection on attention
-will induce confounding bias in a randomised experiment. For example,
-imagine that people are more attentive in the scientific authority
-design because science is interesting -- whether or not one is
-religious, yet religion is not interesting whether or not one is
-religious. Suppose further that an unmeasured `altruistic disposition'
-affects both attention and ratings of source credibility. By selecting
-on attention, investigators may unwittingly destroy randomisation. If
-attention is a scientifically interesting effect modifier, it should be
-measured before random assignment to treatment.
+variables can be illustrated with a common flaw in experimental designs:
+exclusion based on `attention checks'. Consider that if an experimental
+condition affects attention and an unmeasured variable is a common cause
+of attention and the outcome, then selection on attention will induce
+confounding bias in a randomised experiment. For example, imagine that
+people are more attentive in the scientific authority design because
+science is interesting -- whether or not one is religious, yet religion
+is not interesting whether or not one is religious. Suppose further that
+an unmeasured `altruistic disposition' affects both attention and
+ratings of source credibility. By selecting on attention, investigators
+may unwittingly destroy randomisation. If attention is a scientifically
+interesting effect modifier, it should be measured before random
+assignment to treatment.
 
 \subsubsection{Example 3: Demographic Measures at End of Study Induce
 Collider Stratification
@@ -545,25 +545,26 @@ removing any arrow between the treatment \(A\) and the true outcome
 \(Y\).
 
 Table~\ref{tbl-terminologyelconfoundersexperiments} \(\mathcal{G}_{5}\)
-reveals there is no easy solution to directed measurement error bias. If
-the magnitude of bias were known, investigators could apply adjustments.
-Additional experiments might be devised that are insensitive to directed
-measurement error bias. Investigators might compute sensitivity analyses
-to examine how much measurement error bias would be required to explain
-away a result (refer to Linden \emph{et al.}
-(\citeproc{ref-linden2020EVALUE}{2020}) for relatively easy-to-implement
-sensitivity analysis). The point we make here is that randomisation does
-not prevent confounding by directed measurement error bias.
-Investigators must be vigilant.
+suggests there is no easy solution to directed measurement error bias in
+this setting. If the magnitude of the bias were known, investigators
+could apply adjustments (\citeproc{ref-lash2009applying}{Lash \emph{et
+al.} 2009}). Additional experiments might be devised that are
+insensitive to directed measurement error bias. Investigators might
+compute sensitivity analyses to examine how much measurement error bias
+would be required to explain away a result (refer to Linden \emph{et
+al.} (\citeproc{ref-linden2020EVALUE}{2020}) for relatively
+easy-to-implement sensitivity analysis). The point we make here is that
+randomisation does not prevent confounding by directed measurement error
+bias. Investigators must be vigilant.
 
 \subsubsection{Example 6: Per Protocol Effect Lost in Sustained
 Treatments Where Treatment Adherence Is Affected by a Measured
 Confounder}\label{example-6-per-protocol-effect-lost-in-sustained-treatments-where-treatment-adherence-is-affected-by-a-measured-confounder}
 
 Setting aside self-inflicted injuries of post-treatment conditioning and
-directed measurement error, randomisation recovers unbiased causal
-effect estimates for randomisation into treatment. Under perfect
-adherence, these effect estimates correspond to the causal effects of
+directed measurement error, \textbf{randomisation recovers unbiased
+causal effect estimates for randomisation into treatment.}. Under
+perfect adherence, such estimates correspond to the causal effects of
 the treatments themselves. However, adherence is seldom perfect. The
 following examples reveal challenges for recovering per-protocol effects
 in settings where there is imperfect adherence.
@@ -641,11 +642,15 @@ of all future counterfactual data, both for the treatments and the
 outcomes, then it might be possible to construct special estimators that
 identify the per-protocol effect of yoga on well-being in the presence
 of unmeasured confounding that affects adherence (refer to Hernán
-\emph{et al.} (\citeproc{ref-hernan2017per}{2017})). Clearly, we have
-come a long way from the ANOVAs routinely deployed in experimental
+\emph{et al.} (\citeproc{ref-hernan2017per}{2017})). These special
+estimators are quite different from the ANOVAs, regressions models, and
+multi-level regression models routinely deployed in experimental
 studies. However, if we seek to understand the effect of yoga on
-well-being and not the effect of random assignment to yoga on
-well-being, we require special estimators.
+well-being and not the effect of random assignment to yoga on well-being
+the routine estimators will not work: we require special estimators
+(\citeproc{ref-diaz2023lmtp}{Díaz \emph{et al.} 2023};
+\citeproc{ref-hernan2024stating}{Hernán and Greenland 2024};
+\citeproc{ref-hoffman2023}{Hoffman \emph{et al.} 2023}).
 
 \subsection{Conclusions}\label{conclusions}
 
@@ -672,39 +677,22 @@ whether our causal estimand is the intention-to-treat effect or the
 per-protocol effect. Randomisation recovers an unbiased estimate of the
 intention-to-treat effect --- that is, the effect of treatment
 assignment. Randomisation will only recover the per-protocol effect, the
-effect of following a treatment, if those assigned to treatment follow
-the treatment to which they have been assigned.
+effect of following a treatment, if those assigned to treatment adhere
+to their assigned treatment.
 
 Third, causal directed acyclic graphs are useful for clarifying sources
 of bias for both the intention-to-treat effect and the per-protocol
-effect.
-
-\begin{enumerate}
-\def\labelenumi{\roman{enumi}.}
-\tightlist
-\item
-  For the intention-to-treat effect, biases arise in two main ways:
-
-  \begin{enumerate}
-  \def\labelenumii{\alph{enumii}.}
-  \tightlist
-  \item
-    when investigators impose selection criteria on participants after
-    randomisation (e.g., assessing treatment effects only in those who
-    have followed protocols) or
-  \item
-    when investigators estimate treatment effects using covariates
-    collected after randomisation. Both post-treatment selection and
-    post-treatment conditioning are self-inflicted sources of
-    confounding bias. The remedy: do not allow your design to compromise
-    randomisation.
-  \end{enumerate}
-\item
-  For the per-protocol effect, randomisation cannot guarantee unbiased
-  estimates. Obtaining consistent estimates for the per-protocol effect
-  requires the same assumptions and methods that are required when
-  estimating causal effects in observational studies.
-\end{enumerate}
+effect. For the intention-to-treat effect, biases arise in two main
+ways: when investigators impose selection criteria on participants after
+randomisation (e.g., assessing treatment effects only in those who have
+followed protocols) or when investigators estimate treatment effects
+using covariates collected after randomisation. Both post-treatment
+selection and post-treatment conditioning are self-inflicted sources of
+confounding bias. The remedy is to not allow your design to compromise
+randomisation. For the per-protocol effect, randomisation cannot
+guarantee unbiased estimates. Obtaining consistent estimates for the
+per-protocol effect requires the same assumptions and methods that are
+required when estimating causal effects in observational studies.
 
 Fourth, in a sequential randomised experiment, standard methods such as
 regression adjustment, statistical structural equation models, and
@@ -715,7 +703,7 @@ multi-level models will often fail to yield unbiased estimands
 Special estimators such as `g-methods'
 (\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024}) or targeted
 learning (\citeproc{ref-vanderlaan2018}{Van Der Laan and Rose 2018}) may
-be necessary to recover per-protocal effects in sequential designs. The
+be necessary to recover per-protocol effects in sequential designs. The
 requirements for estimating per-protocol effects in experiments cannot
 be stated in isolation from the details of each study
 (\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024};
@@ -734,7 +722,7 @@ From these observations, we offer the following practical advice:
   Do not use `attention checks' to select participants after
   randomisation into treatments.
 \item
-  If adjustment is used in a single point treatment with baseline
+  If adjustment is used in a single-point treatment with baseline
   covariates, interact every level of treatment with the baseline
   covariates, following Lin
   (\citeproc{ref-lin2012regressexperiments}{2013}).
@@ -743,10 +731,10 @@ From these observations, we offer the following practical advice:
   possible).
 \item
   For sequential treatments, at each measurement interval, ensure
-  covariate data collection for any variable that might affect
-  adherence, or that might be proxies for such variables, particularly
-  if these variables, or proxies of these variables, might affect
-  outcomes at the end of the study.
+  covariate data collection for any variable that might affect adherence
+  or that might be proxies for such variables, particularly if these
+  variables, or proxies for these variables, might affect outcomes at
+  the end of the study.
 \item
   Do not infer per-protocol effects from the portion of the sample that
   followed experimental protocols. Such selection can lead to
@@ -758,13 +746,13 @@ From these observations, we offer the following practical advice:
 \end{enumerate}
 
 It is beyond the scope of this commentary to describe the special
-methods for estimating per-protocol effects in sequential studies. Our
-task has been to demonstrate that satisfying the assumptions for valid
-causal inferences in experiments is typically more challenging than many
-experimental human scientists presently understand (refer to
-\citeproc{ref-montgomery2018}{Montgomery \emph{et al.} 2018}). Methods
-for causal inference have wide scope for improving the design, analysis,
-and interpretation of experimental research.
+methods for estimating per-protocol effects with multiple sequential
+treatments. Our task has been to demonstrate that satisfying the
+assumptions for valid causal inferences in experiments is typically more
+challenging than many experimental human scientists presently understand
+(refer to \citeproc{ref-montgomery2018}{Montgomery \emph{et al.} 2018}).
+Methods for causal inference have wide scope for improving the design,
+analysis, and interpretation of experimental research.
 
 \newpage{}
 
@@ -798,6 +786,13 @@ Illustrating bias due to conditioning on a collider. \emph{International
 Journal of Epidemiology}, \textbf{39}(2), 417--420.
 doi:\href{https://doi.org/10.1093/ije/dyp334}{10.1093/ije/dyp334}.
 
+\bibitem[\citeproctext]{ref-diaz2023lmtp}
+Díaz, I, Williams, N, Hoffman, KL, and Schenck, EJ (2023) Nonparametric
+causal effects based on longitudinal modified treatment policies.
+\emph{Journal of the American Statistical Association},
+\textbf{118}(542), 846--857.
+doi:\href{https://doi.org/10.1080/01621459.2021.1955691}{10.1080/01621459.2021.1955691}.
+
 \bibitem[\citeproctext]{ref-diaz2021nonparametric}
 Dı́az, I, Hejazi, NS, Rudolph, KE, and Der Laan, MJ van (2021)
 Nonparametric efficient causal mediation with intermediate confounders.
@@ -814,6 +809,10 @@ research. \emph{Journal of Epidemiology \& Community Health},
 \textbf{58}(4), 265--271.
 doi:\href{https://doi.org/10.1136/jech.2002.006361}{10.1136/jech.2002.006361}.
 
+\bibitem[\citeproctext]{ref-hernan2024stating}
+Hernán, MA, and Greenland, S (2024) Why stating hypotheses in grant
+applications is unnecessary. \emph{JAMA}, \textbf{331}(4), 285--286.
+
 \bibitem[\citeproctext]{ref-hernan2017per}
 Hernán, MA, Robins, JM, et al. (2017) Per-protocol analyses of pragmatic
 trials. \emph{N Engl J Med}, \textbf{377}(14), 1391--1398.
@@ -823,6 +822,10 @@ Hoffman, KL, Salazar-Barreto, D, Rudolph, KE, and Díaz, I (2023)
 Introducing longitudinal modified treatment policies: A unified
 framework for studying complex exposures.
 doi:\href{https://doi.org/10.48550/arXiv.2304.09460}{10.48550/arXiv.2304.09460}.
+
+\bibitem[\citeproctext]{ref-lash2009applying}
+Lash, TL, Fox, MP, and Fink, AK (2009) \emph{Applying quantitative bias
+analysis to epidemiologic data}, Springer.
 
 \bibitem[\citeproctext]{ref-lin2012regressexperiments}
 Lin, W (2013) {Agnostic notes on regression adjustments to experimental
@@ -838,7 +841,7 @@ e-values: The evalue package. \emph{The Stata Journal}, \textbf{20}(1),
 
 \bibitem[\citeproctext]{ref-mcelreath2020}
 McElreath, R (2020) \emph{Statistical rethinking: A {B}ayesian course
-with examples in r and stan}, CRC press.
+with examples in {R} and {S}tan}, CRC press.
 
 \bibitem[\citeproctext]{ref-montgomery2018}
 Montgomery, JM, Nyhan, B, and Torres, M (2018) How conditioning on
